--- a/biografia.html
+++ b/biografia.html
@@ -73,7 +73,7 @@
                 <h1>1967</h1>
                 <img
                     src="https://www.libreriasinopsis.com/imagenes/9788439/978843972836.JPG"
-                    alt="100_anios_de_soledad"
+                    alt="100_anos_de_soledad"
                 />
             </div>
         </div>
